--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,15 @@
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
-body, h1, h2, h3, h4, h5, h6 {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-size: 15px;
   margin: 0;
   line-height: 24px;
@@ -14,7 +20,10 @@ body {
   background-color: #efefef;
 }
 
-body, html, #app, #app > div{
+body,
+html,
+#app,
+#app > div {
   height: 100%;
 }
 
@@ -28,5 +37,5 @@ a:hover {
 }
 
 .m-b-15 {
-  margin-bottom: 15px
+  margin-bottom: 15px;
 }
